header html fini

--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header>
+        <section>
+            <div>
+                <img src="../../CSS/exo_decoupage_molengeek/public/images/many_contact_logo.png" alt="many_contact_logo">
+            </div>
+            <div>
+                <span>Restez informé de nos événements !</span>
+                <input type="text" placeholder="eMail">
+                <button>S'INSCRIRE</button>
+            </div>
+        </section>
+
+        <nav>
+            <div>
+                <img src="../../CSS/exo_decoupage_molengeek/public/images/logo.jpg" alt="logo">
+            </div>
+            <ul>
+                <li>ACCUEIL</li>
+                <li>A PROPOS</li>
+                <li>COWORKING</li>
+                <li>CODING SCHOOL</li>
+                <li>AGENDA</li>
+                <li>FORMATIONS</li>
+                <li>PRESSE</li>
+            </ul>
+        </nav>
+        <nav>
+            <li>TESTEZ LE COWORKING !</li>
+        </nav>
+    </header>
+
+
 </body>
+
 </html>
