--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./public/css/app.css">
 </head>
 
 <body>
     <header>
-        <section>
-            <div>
-                <img src="../../CSS/exo_decoupage_molengeek/public/images/many_contact_logo.png" alt="many_contact_logo">
+        <section class="headerpage">
+            <div class="imagemany">
+                <img src="./public/img/many_contact_logo.png" alt="many_contact_logo">
             </div>
-            <div>
+            <div class="s_inscrire">
                 <span>Restez informé de nos événements !</span>
                 <input type="text" placeholder="eMail">
                 <button>S'INSCRIRE</button>
@@ -23,7 +24,7 @@
 
         <nav>
             <div>
-                <img src="../../CSS/exo_decoupage_molengeek/public/images/logo.jpg" alt="logo">
+                <img src="./public/img/logo.jpg" alt="logo">
             </div>
             <ul>
                 <li>ACCUEIL</li>
@@ -33,10 +34,8 @@
                 <li>AGENDA</li>
                 <li>FORMATIONS</li>
                 <li>PRESSE</li>
+                <li class="testcow">TESTEZ LE COWORKING !</li>
             </ul>
-        </nav>
-        <nav>
-            <li>TESTEZ LE COWORKING !</li>
         </nav>
     </header>
 
